cod-tools (unreleased)

  * Added:
    - COD::CIF::DDL:
      - the get_category_name_from_local_data_name() subroutine.
    - COD::CIF::DDL::DDL1:
      - the classify_dic_blocks() subroutine;
      - the get_data_name() subroutine;
      - the get_data_names() subroutine.
  * Fixed:
    - COD::CIF::Data::Check:
      - fixed a typo in a warning message generated by the
        check_formula_sum_syntax() subroutine.
    - corrected a typo in the 'cif_CODify', 'cif_cod_deposit', 'codcif2sdf',
      'molcif2sdf' and 'sdf_add_cod_data' scripts.

cod-tools (2.10)

  * Added:
    - cif_validate:
      - a check that reports looped lists containing data items from more
        than one dictionary category;
      - a check that reports unique loop key violations;
      - a check that reports missing mandatory looped list data items.
    - COD::CIF::DDL::DDL1:
      - the get_category_name() subroutine;
      - the get_list_mandatory_flag() subroutine.
  * Changed:
    - cifvalues:
      - updated the help message.
    - cif_validate:
      - reworded a validation message to explicitly state that the composite
        loop reference requires collectively unique values;
      - updated the way validation messages are generated to ensure that
        the canonical form of data item names is used regardless of the
        underlying data structure.
    - COD::CIF::Data::CIF2COD:
      - implemented the handling of the 'gofref' column.
    - COD::CIF::Tags::DictTags:
      - added data item names from the 'cif_core_restraint.dic'
        and the 'cif_twinning.dic' CIF dictionary to the global
        '@tag_list' variable.
  * Removed:
      - the 'database-schemas/cif2cod.sql' file.
  * Fixed:
      - cif_list_tags:
        - a typo in an option name ('--vebose' to '--verbose').
      - COD::CIF::Data::CIF2COD:
        - changed the data item set from which the value for the 'gofobs' column
          is retrieved from ['_refine_ls_goodness_of_fit_ref'] to