@@ -6,7 +6,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL::DDL1:
       - the classify_dic_blocks() subroutine;
       - the get_data_name() subroutine;
-      - the get_data_names() subroutine.
+      - the get_data_names() subroutine;
+      - the convert_category_name_to_item_definition_form() subroutine.
   * Fixed:
     - COD::CIF::Data::Check:
       - fixed a typo in a warning message generated by the
